provide interface for synchronizing danmaku with external playback-timer (via DanmakuContext.setDanmakuSync)